dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
 .light{
     color:  #1A1A2E;
 }
+.dark1{
+    color: #E9EEFF;
+}
 .dark{
    background-color: #1A1A2E;
  color: #E9EEFF;
@@ -217,6 +220,7 @@ background-image: linear-gradient(135deg, #5C7AEA 0%, #A259FF 100%);
     width: 150px;
     height: 150px;
     object-fit: contain;
+    border-radius: 5px;
 }
 .no-tasks-text{
     font-size: 18px;
